--- a/index.html
+++ b/index.html
@@ -99,13 +99,13 @@
 <body>
     <div class="container">
         <div class="envelope">
-            <div class="flap"></div>
+            <div class="flap"></div>                                                    
             <button class="open-button" onclick="openLetter()">Open Me</button>
         </div>
         <div class="letter">
             <h1>For My Love ❤️</h1>
             <p>Hi mi amor, </p>
-            <p>I don't even know how to start, and I don't know when it began to feel like home with you. The only thing I'm certain is that you are the best person I know. You have such a beautiful personality, if you don't believe me then let me describe it to you: you're brave, funny, charismatic, super duper intelligent, calm, empathetic, thoughtful, creative, ambitious (I know you'll go soo far) and sooooo adorable (like you can't imagine how easy it was to fall in love with you). Every second I get to look at you, your smile (with those cute front teeth that I love soooo much), your eyes that are literally stunning, and just you, are sooo precious and special. Every second I get to talk to you and hear your voice, your stories, your jokes, your hiccups, and every sound you make (I'm dying to hear some random noise in the middle of the night) I fall in love with you all over again. Mi amor, some days we just need to fall asleep and I see the most beautiful girl. I love and adore you ❤️</p>
+            <p>I don't even know how to start and I cannot tell you the exact moment I started giggling at your texts or started daydreaming about you. The only thing I'm certain is that since I meet you, I lost my words and my mind. I became crazy for you. You are .... sadly i cannot really put it in words for you but, let me try: you're brave, funny, charismatic, super duper intelligent, calm, empathetic, thoughtful, creative, ambitious (I know you'll go soo far) and sooooo adorable (like you can't imagine how easy it was to fall in love with you). Every second I get to look at you, your smile (with those cute front teeth that I love soooo much), your eyes that are literally stunning, and just you, are sooo precious and special. Every second I get to talk to you and hear your voice, your stories, your jokes, your hiccups, and every sound you make (I'm dying to hear some random noise in the middle of the night) I fall in love with you all over again. Mi amor, some days we just need to fall asleep and I see the most beautiful girl. I love and adore you ❤️</p>
             <p>Forever yours,<br>Sofia</p>
         </div>
     </div>
